MSR20 원본, 편집, 컬럼, 결측지, CWE ID 개수

--- a/DATASET.ipynb
+++ b/DATASET.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "187gf8xFPe26CdOUVObKFF0d5ukBsIW1r",
-      "authorship_tag": "ABX9TyP8dO6Q4WpYCkPoFW28qlIY",
+      "authorship_tag": "ABX9TyMQua35C1nT8mgs7VuG0RxE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1380,9 +1380,46 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "train['CWE ID'].value_counts()"
+      ],
+      "metadata": {
+        "id": "8rjKHqNOTQBA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6bc29854-ee96-46b2-f417-049c789d71ea"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CWE-119    26497\n",
+              "CWE-20     20501\n",
+              "CWE-399    14806\n",
+              "CWE-264    12487\n",
+              "CWE-416     9780\n",
+              "           ...  \n",
+              "CWE-769        3\n",
+              "CWE-345        2\n",
+              "CWE-209        1\n",
+              "CWE-331        1\n",
+              "CWE-252        1\n",
+              "Name: CWE ID, Length: 91, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8rjKHqNOTQBA"
+        "id": "vxxFZI5wSqzN"
       },
       "execution_count": null,
       "outputs": []
