MSR20 dataset 원본, 편집본, 결측치, 컬럼, CWE 개수

--- a/DATASET.ipynb
+++ b/DATASET.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "187gf8xFPe26CdOUVObKFF0d5ukBsIW1r",
-      "authorship_tag": "ABX9TyMQua35C1nT8mgs7VuG0RxE",
+      "authorship_tag": "ABX9TyO3+ddnn1gOff0DfgWStPdI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1381,16 +1381,16 @@
     {
       "cell_type": "code",
       "source": [
-        "train['CWE ID'].value_counts()"
+        "train['CWE ID'].value_counts().head(30)"
       ],
       "metadata": {
         "id": "8rjKHqNOTQBA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6bc29854-ee96-46b2-f417-049c789d71ea"
+        "outputId": "6dcc68d6-b026-41d1-f127-5f96eff4ac17"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1401,17 +1401,36 @@
               "CWE-399    14806\n",
               "CWE-264    12487\n",
               "CWE-416     9780\n",
-              "           ...  \n",
-              "CWE-769        3\n",
-              "CWE-345        2\n",
-              "CWE-209        1\n",
-              "CWE-331        1\n",
-              "CWE-252        1\n",
-              "Name: CWE ID, Length: 91, dtype: int64"
+              "CWE-200     8636\n",
+              "CWE-125     7717\n",
+              "CWE-189     6964\n",
+              "CWE-362     6073\n",
+              "CWE-476     4572\n",
+              "CWE-190     3671\n",
+              "CWE-254     3000\n",
+              "CWE-787     2918\n",
+              "CWE-284     2425\n",
+              "CWE-732     1480\n",
+              "CWE-310     1478\n",
+              "CWE-400     1282\n",
+              "CWE-772     1205\n",
+              "CWE-59      1049\n",
+              "CWE-617     1026\n",
+              "CWE-415      993\n",
+              "CWE-269      930\n",
+              "CWE-404      916\n",
+              "CWE-704      908\n",
+              "CWE-79       877\n",
+              "CWE-835      864\n",
+              "CWE-369      740\n",
+              "CWE-19       723\n",
+              "CWE-22       690\n",
+              "CWE-17       684\n",
+              "Name: CWE ID, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 8
         }
       ]
     },
