Colab을 통해 생성됨

--- a/GCBert_파라미터_자동화.ipynb
+++ b/GCBert_파라미터_자동화.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "V100",
+      "gpuType": "A100",
       "authorship_tag": "ABX9TyPFSj0Z7eZuYO3LWFcOSz9J",
       "include_colab_link": true
     },
@@ -728,9 +728,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PoBQuRXwPRcz",
-        "outputId": "511c6b86-7f7a-4487-caa9-61a16c1448b0"
+        "outputId": "ed0801ea-9d74-40db-a8ef-5f1ca2da12a9"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -994,7 +994,7 @@
       "metadata": {
         "id": "FcTWjf-qO-iv"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +1008,7 @@
       "metadata": {
         "id": "9d3coy5WO_aQ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1025,7 +1025,7 @@
         "id": "x1dFWuiGPCHb",
         "outputId": "f8791ee0-5ef3-4aef-e16b-8d7d68e1f462"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1055,7 +1055,7 @@
       "metadata": {
         "id": "z1oXAJ0tPDbs"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1100,7 +1100,7 @@
         "id": "HtC9I6wtPGI8",
         "outputId": "c753118e-ff53-416b-ac64-5df67ba20b01"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1141,7 +1141,7 @@
       "metadata": {
         "id": "j80L5XVcPH4O"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1161,7 +1161,7 @@
       "metadata": {
         "id": "uZStPq8YPJoh"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1210,7 +1210,7 @@
         "id": "L2myqnDTN_78",
         "outputId": "ba98e1be-0d12-4a14-fb58-ae854c8fa3bf"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
