--- a/0509_Ensemble_(bagging).ipynb
+++ b/0509_Ensemble_(bagging).ipynb
@@ -493,8 +493,11 @@
         "import torch\n",
         "\n",
         "def predict_class(input_code, model, tokenizer):\n",
+        "    # 입력 코드의 단어 수를 기반으로 최대 길이 설정\n",
+        "    max_length = len(input_code.split())\n",
+        "\n",
         "    # 입력 코드를 토크나이징하고 모델 입력 형식으로 변환\n",
-        "    inputs = tokenizer(input_code, return_tensors=\"pt\", padding=True, truncation=True)\n",
+        "    inputs = tokenizer(input_code, return_tensors=\"pt\", padding=True, truncation=True, max_length=max_length)\n",
         "\n",
         "    # 모델에 입력 전달하여 클래스 예측\n",
         "    with torch.no_grad():\n",
@@ -523,13 +526,50 @@
         "    # 예측된 클래스에 해당하는 설명 반환\n",
         "    predicted_class_label = class_labels[predicted_class]\n",
         "\n",
-        "    return predicted_class_label\n"
+        "    return predicted_class_label\n",
+        "\n",
+        "input_code = \"\"\"\n",
+        "#include <stdio.h>\n",
+        "#include <unistd.h>\n",
+        "#define BUFSIZE1 512\n",
+        "#define BUFSIZE2 ((BUFSIZE1/2) - 8)\n",
+        "\n",
+        "int main(int argc, char **argv) {\n",
+        "char *buf1R1;\n",
+        "char *buf2R1;\n",
+        "char *buf1R2;\n",
+        "buf1R1 = (char *) malloc(BUFSIZE2);\n",
+        "buf2R1 = (char *) malloc(BUFSIZE2);\n",
+        "free(buf1R1);\n",
+        "free(buf2R1);\n",
+        "buf1R2 = (char *) malloc(BUFSIZE1);\n",
+        "strncpy(buf1R2, argv[1], BUFSIZE1-1);\n",
+        "free(buf2R1);\n",
+        "free(buf1R2);\n",
+        "}\n",
+        "\"\"\"\n",
+        "\n",
+        "predicted_label = predict_class(input_code, model, tokenizer)\n",
+        "print(predicted_label)\n"
       ],
       "metadata": {
-        "id": "ZsKv2RROSJGb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZsKv2RROSJGb",
+        "outputId": "5d588707-6cde-456c-afbf-f32df6457044"
       },
-      "execution_count": 51,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CWE-787 취약점\n",
+            "Out-of-bounds Write\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
